<resources>
    <string name="app_name">Action Path: New Haven</string>
    <string name="action_settings">Settings</string>
    <string name="places_list_header">Choose Your <City> </City></string>
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_followed_issues">My Actions</string>
    <string name="nav_all_issues">All Local Actions</string>
    <string name="nav_update_issues">Update Actions</string>
    <string name="nav_pick_place">Pick a City</string>
    <string name="nav_about">About</string>
    <string name="nav_stats">Stats</string>
    <string name="all_issues_of_request_type_header">%1$s: All in %2$s</string>
    <string name="all_issues_header">All Actions in %s</string>
    <string name="all_followed_issues_of_request_type_header">%1$s: Mine in %2$s</string>
    <string name="followed_issues_header">My Actions in %s</string>
    <string name="recently_updated_issues_header">Recently Updated in %s</string>
    <string name="pick_place_header">Choose Your City</string>
    <string name="update_issues_header">Updating Actions in %s</string>
    <string name="about_header">About Action Path</string>
    <string name="issue_detail_summary">Summary</string>
    <string name="issue_detail_description">Description</string>
    <string name="issue_detail_status">Status</string>
    <string name="issue_detail_location">Location</string>
    <string name="issue_detail_view_online">View Online</string>
    <string name="followed_issue_feedback">Action followed</string>
    <string name="unfollowed_issue_feedback">Action unfollowed</string>
    <string name="walk_there">Walk There Now</string>
    <string name="drawer_close">Navigation View</string>
    <string name="drawer_open">Navigation View Closed</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_issues_to_show">No actions to show</string>
    <string name="issue_question">Is this still a problem?</string>
    <string name="issue_answer_yes">Yes</string>
    <string name="issue_answer_no">No</string>
    <string name="issue_question_answered">Saved your answer. You are following this action.</string>
    <string name="action_undo">Undo</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <plurals name="updated_issues">
        <item quantity="one">Updated %d action</item>
        <item quantity="other">Updated %d actions</item>
    </plurals>
    <string name="issues_update_failed">Failed to update actions.</string>
    <string name="title_activity_maps">Map</string>
    <string name="created_new_installation">Created a new installation</string>
    <string name="placeholder">Placeholder Text</string>
    <string name="image_description">Image associated with the current action.</string>
    <string name="about_summary_title">Summary</string>
    <string name="about_summary_body">Have something to say on how to improve your local community? Action Path brings the town hall to you.\n\nCreated by the MIT Center for Civic Media, Action Path is a location-based civic engagement platform that prompts you to explore your cities and participate in governance around infrastructure issues and planning. Thanks for taking action!</string>
    <string name="about_team_title">Team</string>
    <string name="about_team_body">Erhardt Graeff\nRahul Bhargava\nEmilie Reiser</string>
    <string name="about_contact_title">Contact</string>
    <string name="about_contact_body">If you have any questions or concerns about the research, please feel free to contact Erhardt Graeff at erhardt@media.mit.edu or 1-717-919-3145, or Ethan Zuckerman at ethanz@media.mit.edu or 1-617-253-3962.</string>
    <string name="image_description_medialab_logo">MIT Media Lab logo</string>
    <string name="image_description_civicmedia_logo">MIT Center for Civic Media logo</string>
    <string name="nearby_notification">Action Nearby</string>
    <string name="update_notification">Action Updated</string>
    <string name="failed_to_save_answer">Problem saving your answer</string>
    <string name="failed_to_get_location">Problem determining your location</string>
    <string name="failed_to_fetch_places_near">Problem finding places near you</string>
    <string name="failed_to_parse_places_near">Server error retrieving places</string>
    <string name="nav_save_debug_info">Save Debug Info (%1$d/%2$d)</string>
    <string name="backup_unsynced_records_worked">Backing up unsynced records worked</string>
    <string name="backup_unsynced_records_failed">Backing up unsynced records failed</string>
    <string name="location_not_enabled">Your GPS is not turned on! Please turn it on, otherwise ActionPath is kind of useless.</string>
    <string name="open_location_settings">Turn on your GPS</string>
    <string name="cancel">Cancel</string>
    <string name="other_hint">other</string>
    <string name="about_privacy_title">Privacy Statement</string>
    <string name="consent_title">CONSENT TO PARTICIPATE IN NON-BIOMEDICAL RESEARCH</string>
    <string name="consent_summary">You or your child are asked to participate in a research study conducted by Erhardt Graeff, a PhD student at the Media Lab at the Massachusetts Institute of Technology (M.I.T.). Results will contribute to research publications by Erhardt Graeff and to ongoing development of the Action Path app. You or your child was selected as a possible participant in this study because membership in a local organization. You should read the information below, and ask questions about anything you do not understand, before deciding whether or not to participate.</string>
    <string name="consent_i_understand">I Understand</string>
    <string name="consent_participation_title">PARTICIPATION AND WITHDRAWAL</string>
    <string name="consent_participation_text">Your or your child’s participation in this study is completely voluntary and you are free to choose whether to be in it or not. If you choose to be in this study, you may subsequently withdraw from it at any time without penalty or consequences of any kind. The investigator may withdraw you from this research if circumstances arise which warrant doing so.</string>
    <string name="consent_purpose_title">PURPOSE OF THE STUDY</string>
    <string name="consent_purpose_text">This study looks at how technologies can support community action.</string>
    <string name="consent_procedures_title">PROCEDURES</string>
    <string name="consent_procedures_text">If you volunteer to participate in this study, we would ask you or your child do some or all of the following things:\nTake a short survey; Use a smartphone app called Action Path; and Participate in a short intervew. These will all be undertaken in or around your community. Interviews will be done at the location of your local organization. Interviews will last less than 30 minutes.\nThe app (Action Path) will send you push notifications, ask you to take short walks to visit locations in your community, and then ask you to complete a short task in the app. Data will be collected during your use of the smartphone app, including your location while using the app and anything that you input into the app.</string>
    <string name="consent_risks_title">POTENTIAL RISKS AND DISCOMFORTS</string>
    <string name="consent_risks_text">No risks or discomforts are forseeable.</string>
    <string name="consent_benefits_title">POTENTIAL BENEFITS</string>
    <string name="consent_benefits_text">Potential benefits of participating in this research include learning new things about your community.</string>
    <string name="consent_payment_title">PAYMENT FOR PARTICIPATION</string>
    <string name="consent_payment_text">You will not be paid for participation in this study.</string>
    <string name="consent_confidentiality_title">CONFIDENTIALITY</string>
    <string name="consent_confidentiality_text">Any information that is obtained in connection with this study and that can be identified with you will remain confidential and will be disclosed only with your permission or as required by law.\nData collected from app usage will be connected to personal accounts, which may contain personally identifiable information. Your activity on the app may be viewed by other users of the app. However, access to the servers where app data are stored will be restricted to primary researchers and only connected to survey and interview data through subject number codes. Personally identifiable information will be stored separately from that research data, and all data will be digitally locked with a password, which only primary researchers will have. Any quotes used in publications will be given pseudonymous names.\nAudio recordings of interviews will be collected to assist with research. Recordings will be transcribed and then the original recording will be destroyed one year after the study’s completion.</string>
    <string name="consent_investigators_title">IDENTIFICATION OF INVESTIGATORS</string>
    <string name="consent_investigators_text">If you have any questions or concerns about the research, please feel free to contact Erhardt Graeff at erhardt@media.mit.edu or 1-717-919-3145, or Ethan Zuckerman at ethanz@media.mit.edu or 1-617-253-3962.</string>
    <string name="consent_emergency_title">EMERGENCY CARE AND COMPENSATION FOR INJURY</string>
    <string name="consent_emergency_text">If you feel you or your child have suffered an injury, which may include emotional trauma, as a result of participating in this study, please contact the person in charge of the study as soon as possible.\nIn the event you or your child suffer such an injury, M.I.T. may provide itself, or arrange for the provision of, emergency transport or medical treatment, including emergency treatment and follow-up care, as needed, or reimbursement for such medical services. M.I.T. does not provide any other form of compensation for injury. In any case, neither the offer to provide medical assistance, nor the actual provision of medical services shall be considered an admission of fault or acceptance of liability. Questions regarding this policy may be directed to MIT’s Insurance Office, (617) 253-2823. Your insurance carrier may be billed for the cost of emergency transport or medical treatment, if such services are determined not to be directly related to your participation in this study.</string>
    <string name="consent_rights_title">RIGHTS OF RESEARCH SUBJECTS</string>
    <string name="consent_rights_text">You and your child are not waiving any legal claims, rights or remedies because of your participation in this research study. If you feel you have been treated unfairly, or you have questions regarding your rights as a research subject, you may contact the Chairman of the Committee on the Use of Humans as Experimental Subjects, M.I.T., Room E25-143B, 77 Massachusetts Ave, Cambridge, MA 02139, phone 1-617-253 6787.</string>
    <string name="consent_agreement_title">AGREEMENT</string>
    <string name="consent_agreement_text">I understand the procedures described above. My questions have been answered to my satisfaction, and I agree to participate in this study.</string>
</resources>