<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_my_issues"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_my_issues"/>
        <item
            android:id="@+id/nav_all_issues"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_all_issues"/>
        <item
            android:id="@+id/nav_update_issues"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_update_issues"/>
        <item
            android:id="@+id/nav_pick_place"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_pick_place"/>
        <item
            android:id="@+id/nav_about"
            android:checked="false"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_about"/>

    </group>

</menu>
