<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    >

    <TextView
        android:paddingTop="@dimen/textview_title_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issue_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/issue_detail_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_answer_yes"/>
        <RadioButton android:id="@+id/issue_detail_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_answer_no"/>
    </RadioGroup>

</LinearLayout>