<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    >

    <TextView
        android:paddingTop="@dimen/textview_title_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/issue_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_answer_yes"
            android:id="@+id/issue_detail_yes"
            android:enabled="true"
            android:layout_weight="1.0" />
        <Button
            android:background="@android:drawable/dialog_holo_light_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_answer_no"
            android:id="@+id/issue_detail_no"
            android:enabled="true"
            android:layout_weight="1.0" />
    </LinearLayout>

</LinearLayout>